name:                wstunnel
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/mzabani/wstunnel#readme
license:             BSD3
license-file:        LICENSE
author:              Marcelo Zabani
maintainer:          mzabani@gmail.com
copyright:           2017 Marcelo Zabani
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WsTunnel, WsTunnel.HttpClient
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , exceptions
                     , mtl
                     , attoparsec
                     , text
                     , websockets
                     , bytestring
                     , aeson
                     , http-client
                     , tls
                     , data-default-class
                     , x509-store
                     , x509-system
                     , monad-control
                     , transformers-base
  default-language:    Haskell2010

test-suite wstunnel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wstunnel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wstunnel